crates/ir/tests/ir/snapshots/main__ir__lower__extern__extern_constructor_throws.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module extern__extern_constructor_throws

extern java "java.io.FileInputStream" new(String) -> Result[String, ~JFileInputStream]
extern type java "java.io.FileInputStream" JFileInputStream
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
declare new: (String) -> Result[String, ~JFileInputStream]
declare println: (g) -> Unit

fn main() -> Unit =
  let v0: Result[String, ~JFileInputStream] = call new("/nonexistent")
  switch v0 {
    0 (v1: d) ->
      let v2: Dict[core/show.Show, String] = get_dict core/show.Show[String]
      let v3: Unit = call println(v2, "ok")
      v3
    1 (v4: c) ->
      let v5: Dict[core/show.Show, String] = get_dict core/show.Show[String]
      let v6: Unit = call println(v5, "caught error")
      v6
  }
