crates/ir/tests/ir/snapshots/main__ir__lower__extern__extern_java_actor.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module extern__extern_java_actor

import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/traversable/sequence as sequence(o[p[r]]) -> p[o[r]]
import core/io/println as println(g) -> Unit
import core/actor/send as send(Ref[n12], n12) -> Unit
import core/actor/receive as receive(Mailbox[w12]) -> w12
import core/actor/spawn as spawn((Mailbox[k12]) -> Unit) -> Ref[k12]
import core/actor/actor_ref as actor_ref(Mailbox[g13]) -> Ref[g13]
declare actor_ref: (Mailbox[g13]) -> Ref[g13]
declare receive: (Mailbox[w12]) -> w12
declare send: (Ref[n12], n12) -> Unit

fn echo(v0: Mailbox[Int]) -> Unit =
  let v1: Int = call receive(v0)
  let v2: Ref[Int] = call actor_ref(v0)
  let v3: Unit = call send(v2, v1)
  v3

fn use_ref(v4: Ref[Int]) -> Unit =
  let v5: Unit = call send(v4, 42)
  v5

fn main() -> Unit =
  let v6: (Mailbox[Int]) -> Unit = make_closure(echo, [])
  let v7: (Mailbox[Int]) -> Unit = v6
  ()
