crates/ir/tests/ir/snapshots/main__ir__lower__extern__extern_java_type.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module extern__extern_java_type

extern java "krypton.runtime.KryptonActors" raw_send(Ref[Int], Int) -> Unit
extern type java "krypton.runtime.Ref" Ref
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[n3]) -> Option[n3]
import core/list/sort_by as sort_by(List[s5], (s5) -> h5) -> List[s5]
import core/list/filter as filter(List[f1], (f1) -> Bool) -> List[f1]
import core/list/fold as fold(List[s1], t1, (t1, s1) -> t1) -> t1
import core/list/map as map(List[u], (u) -> w) -> List[w]
import core/vec/to_list as to_list(Vec[p8]) -> List[p8]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
declare raw_send: (Ref[Int], Int) -> Unit

fn use_ref(v0: Ref[Int]) -> Ref[Int] =
  v0

fn send_msg(v1: Ref[Int], v2: Int) -> Unit =
  let v3: Unit = call raw_send(v1, v2)
  v3
