crates/ir/tests/ir/snapshots/main__ir__lower__extern__extern_multi_target_mismatch.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module extern__extern_multi_target_mismatch

extern java "krypton.runtime.KryptonIO" foo(Int) -> String
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[p3]) -> Option[p3]
import core/list/sort_by as sort_by(List[u5], (u5) -> j5) -> List[u5]
import core/list/filter as filter(List[f1], (f1) -> Bool) -> List[f1]
import core/list/fold as fold(List[s1], u1, (u1, s1) -> u1) -> u1
import core/list/map as map(List[u], (u) -> w) -> List[w]
import core/vec/to_list as to_list(Vec[w7]) -> List[w7]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
